# pyproject-template

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-lint.txt  requirements-test.txt
app/: __main__.py  cli.py  stub.py
