[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example-app"  # Set proper PyPi package name
version = "0.0.1"  # TODO: version should be dynamic
authors = [
    {name = "Example Team", email = "TBD@example.com"},  # TODO: set proper email
]
description = "Example pyproject application."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary License"}
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
repository = "https://github.com/lexadler/pyproject-template"

[project.scripts]
app-cli = "app.__main__:main"

[tool.setuptools]
include-package-data = false
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app", "app.*"]
namespaces = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
lint = {file = ["requirements-lint.txt"]}
test = {file = ["requirements-test.txt"]}

[tool.pytest.ini_options]
addopts = "-l -s --cov=app"

[tool.flake8]
exclude = [
    ".*",
    "__pycache__",
    "build",
    "eggs",
    "dist",
    "venv"
]
ignore = [
    # conflict with W504
    "W503",
    # conflict with E501
    "B950",
    # flake8-annotations: Missing type annotation for self in method
    "ANN101",
    # flake8-annotations: Missing type annotation for cls in classmethod
    "ANN102",
    # flake8-annotations: Dynamically typed expressions (typing.Any) are disallowed
    "ANN401"
]
application-import-names = "app"
import-order-style = "smarkets"
inline-quotes = "'"
multiline-quotes = "'"
max-line-length = 99
max-complexity = 11
suppress-none-returning = true
show-source = true
statistics = true

[tool.mypy]
namespace_packages = true
show_error_context = true
show_column_numbers = true
show_error_codes  = true
pretty  = true
color_output  = true
error_summary  = true
ignore_missing_imports = true  # TODO: better to generate stubs for dependencies
